--- a/teste.html
+++ b/teste.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-<script src="cond.js"></script>
+<script src="desafio04.js"></script>
 </body>
 </html>
